--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 decorator==4.0.9
 Django==1.9.4
 et-xmlfile==1.0.1
+funcsigs==0.4
 ipython==4.1.2
 ipython-genutils==0.1.0
 jdcal==1.2
+mock==1.3.0
 openpyxl==2.3.4
 path.py==8.1.2
+pbr==1.8.1
 pickleshare==0.6
 python-ntlm3==1.0.2
 requests==2.9.1
