--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 amqp==2.2.2
+anyjson==0.3.3
+Babel==2.5.1
 billiard==3.5.0.3
 celery==4.1.0
+certifi==2018.4.16
+chardet==3.0.4
+colorama==0.3.9
 decorator==4.0.9
 Django==1.11.12
+django-celery-results==1.0.1
 django-debug-toolbar==1.9.1
 djangorestframework==3.8.2
 et-xmlfile==1.0.1
+flower==0.9.2
 funcsigs==0.4
+httpie==0.9.9
+idna==2.6
 ipython==4.1.2
 ipython-genutils==0.1.0
 jdcal==1.2
@@ -16,14 +25,17 @@ openpyxl==2.3.4
 path.py==8.1.2
 pbr==1.8.1
 pickleshare==0.6
+Pygments==2.2.0
 python-ntlm3==1.0.2
 pytz==2018.4
-requests==2.9.1
+requests==2.18.4
 requests-ntlm==0.2.0
 selenium==2.53.1
 simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.2.4
+tornado==4.5.2
 traitlets==4.2.1
+urllib3==1.22
 vine==1.1.4
 xlwt==1.3.0
